add: Generic repository
