# client-api/docs/swagger.json
@@ -16,6 +16,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Clientes"
+                ],
                 "summary": "Lista todos os usuários",
                 "responses": {
                     "200": {
@@ -48,6 +51,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Clientes"
                 ],
                 "summary": "Cria um novo usuário",
                 "parameters": [
@@ -94,6 +100,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Clientes"
+                ],
                 "summary": "Obtém um usuário pelo ID",
                 "parameters": [
                     {
@@ -134,6 +143,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Clientes"
                 ],
                 "summary": "Atualiza um usuário existente",
                 "parameters": [
@@ -185,6 +197,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Clientes"
+                ],
                 "summary": "Deleta um usuário pelo ID",
                 "parameters": [
                     {
@@ -224,6 +239,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Transações"
                 ],
                 "summary": "Deposita um valor na conta do usuário",
                 "parameters": [
@@ -276,6 +294,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Transações"
                 ],
                 "summary": "Saca um valor da conta do usuário",
                 "parameters": [
